; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/tests/extr_eval.c_main.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/tests/extr_eval.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@main.exprs = internal constant [94 x i8*] [i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.17, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.18, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.19, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.20, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.21, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.22, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.24, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.25, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.26, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.27, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.28, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.29, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.30, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.31, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.32, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.33, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.34, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.35, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.36, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.37, i32 0, i32 0), i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str.38, i32 0, i32 0), i8* getelementptr inbounds ([122 x i8], [122 x i8]* @.str.39, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.40, i32 0, i32 0), i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.41, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.42, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.43, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.44, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.45, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.46, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.47, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.48, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.49, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.50, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.51, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.52, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.53, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.54, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.55, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.56, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.57, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.58, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.59, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.60, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.61, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.62, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.63, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.64, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.65, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.66, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.67, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.68, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.69, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.70, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.71, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.72, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.73, i32 0, i32 0), i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.74, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.75, i32 0, i32 0), i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.76, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.77, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.78, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.79, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.80, i32 0, i32 0), i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.81, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.82, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.83, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.84, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.85, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.86, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.87, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.88, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.89, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.90, i32 0, i32 0), i8* null], align 16
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"1;2\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"-20\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"-PI\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"+PI\00", align 1
@.str.5 = private unnamed_addr constant [41 x i8] c"1+(5-2)^(3-1)+1/2+sin(PI)-max(-2.2,-3.1)\00", align 1
@.str.6 = private unnamed_addr constant [9 x i8] c"80G/80Gi\00", align 1
@.str.7 = private unnamed_addr constant [3 x i8] c"1k\00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"1Gi\00", align 1
@.str.9 = private unnamed_addr constant [4 x i8] c"1gi\00", align 1
@.str.10 = private unnamed_addr constant [7 x i8] c"1GiFoo\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"1k+1k\00", align 1
@.str.12 = private unnamed_addr constant [9 x i8] c"1Gi*3foo\00", align 1
@.str.13 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@.str.14 = private unnamed_addr constant [5 x i8] c"foo(\00", align 1
@.str.15 = private unnamed_addr constant [6 x i8] c"foo()\00", align 1
@.str.16 = private unnamed_addr constant [5 x i8] c"foo)\00", align 1
@.str.17 = private unnamed_addr constant [4 x i8] c"sin\00", align 1
@.str.18 = private unnamed_addr constant [5 x i8] c"sin(\00", align 1
@.str.19 = private unnamed_addr constant [6 x i8] c"sin()\00", align 1
@.str.20 = private unnamed_addr constant [5 x i8] c"sin)\00", align 1
@.str.21 = private unnamed_addr constant [7 x i8] c"sin 10\00", align 1
@.str.22 = private unnamed_addr constant [11 x i8] c"sin(1,2,3)\00", align 1
@.str.23 = private unnamed_addr constant [8 x i8] c"sin(1 )\00", align 1
@.str.24 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@.str.25 = private unnamed_addr constant [5 x i8] c"1foo\00", align 1
@.str.26 = private unnamed_addr constant [28 x i8] c"bar + PI + E + 100f*2 + foo\00", align 1
@.str.27 = private unnamed_addr constant [22 x i8] c"13k + 12f - foo(1, 2)\00", align 1
@.str.28 = private unnamed_addr constant [11 x i8] c"st(0, 123)\00", align 1
@.str.29 = private unnamed_addr constant [18 x i8] c"st(1, 123); ld(1)\00", align 1
@.str.30 = private unnamed_addr constant [10 x i8] c"lte(0, 1)\00", align 1
@.str.31 = private unnamed_addr constant [10 x i8] c"lte(1, 1)\00", align 1
@.str.32 = private unnamed_addr constant [10 x i8] c"lte(1, 0)\00", align 1
@.str.33 = private unnamed_addr constant [9 x i8] c"lt(0, 1)\00", align 1
@.str.34 = private unnamed_addr constant [9 x i8] c"lt(1, 1)\00", align 1
@.str.35 = private unnamed_addr constant [9 x i8] c"gt(1, 0)\00", align 1
@.str.36 = private unnamed_addr constant [9 x i8] c"gt(2, 7)\00", align 1
@.str.37 = private unnamed_addr constant [14 x i8] c"gte(122, 122)\00", align 1
@.str.38 = private unnamed_addr constant [75 x i8] c"st(0, 1); while(lte(ld(0), 100), st(1, ld(1)+ld(0));st(0, ld(0)+1)); ld(1)\00", align 1
@.str.39 = private unnamed_addr constant [122 x i8] c"st(1, 1); st(2, 2); st(0, 1); while(lte(ld(0),10), st(3, ld(1)+ld(2)); st(1, ld(2)); st(2, ld(3)); st(0, ld(0)+1)); ld(3)\00", align 1
@.str.40 = private unnamed_addr constant [13 x i8] c"while(0, 10)\00", align 1
@.str.41 = private unnamed_addr constant [68 x i8] c"st(0, 1); while(lte(ld(0),100), st(1, ld(1)+ld(0)); st(0, ld(0)+1))\00", align 1
@.str.42 = private unnamed_addr constant [9 x i8] c"isnan(1)\00", align 1
@.str.43 = private unnamed_addr constant [11 x i8] c"isnan(NAN)\00", align 1
@.str.44 = private unnamed_addr constant [11 x i8] c"isnan(INF)\00", align 1
@.str.45 = private unnamed_addr constant [9 x i8] c"isinf(1)\00", align 1
@.str.46 = private unnamed_addr constant [11 x i8] c"isinf(NAN)\00", align 1
@.str.47 = private unnamed_addr constant [11 x i8] c"isinf(INF)\00", align 1
@.str.48 = private unnamed_addr constant [11 x i8] c"floor(NAN)\00", align 1
@.str.49 = private unnamed_addr constant [15 x i8] c"floor(123.123)\00", align 1
@.str.50 = private unnamed_addr constant [16 x i8] c"floor(-123.123)\00", align 1
@.str.51 = private unnamed_addr constant [15 x i8] c"trunc(123.123)\00", align 1
@.str.52 = private unnamed_addr constant [16 x i8] c"trunc(-123.123)\00", align 1
@.str.53 = private unnamed_addr constant [14 x i8] c"ceil(123.123)\00", align 1
@.str.54 = private unnamed_addr constant [15 x i8] c"ceil(-123.123)\00", align 1
@.str.55 = private unnamed_addr constant [11 x i8] c"sqrt(1764)\00", align 1
@.str.56 = private unnamed_addr constant [16 x i8] c"isnan(sqrt(-1))\00", align 1
@.str.57 = private unnamed_addr constant [7 x i8] c"not(1)\00", align 1
@.str.58 = private unnamed_addr constant [9 x i8] c"not(NAN)\00", align 1
@.str.59 = private unnamed_addr constant [7 x i8] c"not(0)\00", align 1
@.str.60 = private unnamed_addr constant [9 x i8] c"6.0206dB\00", align 1
@.str.61 = private unnamed_addr constant [10 x i8] c"-3.0103dB\00", align 1
@.str.62 = private unnamed_addr constant [12 x i8] c"pow(0,1.23)\00", align 1
@.str.63 = private unnamed_addr constant [13 x i8] c"pow(PI,1.23)\00", align 1
@.str.64 = private unnamed_addr constant [8 x i8] c"PI^1.23\00", align 1
@.str.65 = private unnamed_addr constant [13 x i8] c"pow(-1,1.23)\00", align 1
@.str.66 = private unnamed_addr constant [9 x i8] c"if(1, 2)\00", align 1
@.str.67 = private unnamed_addr constant [12 x i8] c"if(1, 1, 2)\00", align 1
@.str.68 = private unnamed_addr constant [12 x i8] c"if(0, 1, 2)\00", align 1
@.str.69 = private unnamed_addr constant [13 x i8] c"ifnot(0, 23)\00", align 1
@.str.70 = private unnamed_addr constant [25 x i8] c"ifnot(1, NaN) + if(0, 1)\00", align 1
@.str.71 = private unnamed_addr constant [15 x i8] c"ifnot(1, 1, 2)\00", align 1
@.str.72 = private unnamed_addr constant [15 x i8] c"ifnot(0, 1, 2)\00", align 1
@.str.73 = private unnamed_addr constant [13 x i8] c"taylor(1, 1)\00", align 1
@.str.74 = private unnamed_addr constant [55 x i8] c"taylor(eq(mod(ld(1),4),1)-eq(mod(ld(1),4),3), PI/2, 1)\00", align 1
@.str.75 = private unnamed_addr constant [22 x i8] c"root(sin(ld(0))-1, 2)\00", align 1
@.str.76 = private unnamed_addr constant [49 x i8] c"root(sin(ld(0))+6+sin(ld(0)/12)-log(ld(0)), 100)\00", align 1
@.str.77 = private unnamed_addr constant [19 x i8] c"7000000B*random(0)\00", align 1
@.str.78 = private unnamed_addr constant [10 x i8] c"squish(2)\00", align 1
@.str.79 = private unnamed_addr constant [11 x i8] c"gauss(0.1)\00", align 1
@.str.80 = private unnamed_addr constant [11 x i8] c"hypot(4,3)\00", align 1
@.str.81 = private unnamed_addr constant [27 x i8] c"gcd(30,55)*print(min(9,1))\00", align 1
@.str.82 = private unnamed_addr constant [14 x i8] c"bitor(42, 12)\00", align 1
@.str.83 = private unnamed_addr constant [15 x i8] c"bitand(42, 12)\00", align 1
@.str.84 = private unnamed_addr constant [15 x i8] c"bitand(NAN, 1)\00", align 1
@.str.85 = private unnamed_addr constant [20 x i8] c"between(10, -3, 10)\00", align 1
@.str.86 = private unnamed_addr constant [20 x i8] c"between(-4, -2, -1)\00", align 1
@.str.87 = private unnamed_addr constant [13 x i8] c"between(1,2)\00", align 1
@.str.88 = private unnamed_addr constant [14 x i8] c"clip(0, 2, 1)\00", align 1
@.str.89 = private unnamed_addr constant [16 x i8] c"clip(0/0, 1, 2)\00", align 1
@.str.90 = private unnamed_addr constant [16 x i8] c"clip(0, 0/0, 1)\00", align 1
@.str.91 = private unnamed_addr constant [17 x i8] c"Evaluating '%s'\0A\00", align 1
@const_names = common dso_local global i32 0, align 4
@const_values = common dso_local global i32 0, align 4
@.str.92 = private unnamed_addr constant [14 x i8] c"'%s' -> nan\0A\0A\00", align 1
@.str.93 = private unnamed_addr constant [13 x i8] c"'%s' -> %f\0A\0A\00", align 1
@.str.94 = private unnamed_addr constant [31 x i8] c"av_expr_parse_and_eval failed\0A\00", align 1
@.str.95 = private unnamed_addr constant [12 x i8] c"%f == 12.7\0A\00", align 1
@.str.96 = private unnamed_addr constant [19 x i8] c"%f == 0.931322575\0A\00", align 1
@.str.97 = private unnamed_addr constant [3 x i8] c"-t\00", align 1
@START_TIMER = common dso_local global i32 0, align 4
@.str.98 = private unnamed_addr constant [23 x i8] c"av_expr_parse_and_eval\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca double, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8** getelementptr inbounds ([94 x i8*], [94 x i8*]* @main.exprs, i64 0, i64 0), i8*** %8, align 8
  br label %10

10:                                               ; preds = %41, %2
  %11 = load i8**, i8*** %8, align 8
  %12 = load i8*, i8** %11, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %44

14:                                               ; preds = %10
  %15 = load i8**, i8*** %8, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.91, i64 0, i64 0), i8* %16)
  %18 = load i8**, i8*** %8, align 8
  %19 = load i8*, i8** %18, align 8
  %20 = load i32, i32* @const_names, align 4
  %21 = load i32, i32* @const_values, align 4
  %22 = call i32 @av_expr_parse_and_eval(double* %7, i8* %19, i32 %20, i32 %21, i32* null, i32* null, i32* null, i32* null, i32* null, i32 0, i32* null)
  store i32 %22, i32* %9, align 4
  %23 = load double, double* %7, align 8
  %24 = call i64 @isnan(double %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %14
  %27 = load i8**, i8*** %8, align 8
  %28 = load i8*, i8** %27, align 8
  %29 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.92, i64 0, i64 0), i8* %28)
  br label %35

30:                                               ; preds = %14
  %31 = load i8**, i8*** %8, align 8
  %32 = load i8*, i8** %31, align 8
  %33 = load double, double* %7, align 8
  %34 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.93, i64 0, i64 0), i8* %32, double %33)
  br label %35

35:                                               ; preds = %30, %26
  %36 = load i32, i32* %9, align 4
  %37 = icmp slt i32 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %35
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.94, i64 0, i64 0))
  br label %40

40:                                               ; preds = %38, %35
  br label %41

41:                                               ; preds = %40
  %42 = load i8**, i8*** %8, align 8
  %43 = getelementptr inbounds i8*, i8** %42, i32 1
  store i8** %43, i8*** %8, align 8
  br label %10

44:                                               ; preds = %10
  %45 = load i32, i32* @const_names, align 4
  %46 = load i32, i32* @const_values, align 4
  %47 = call i32 @av_expr_parse_and_eval(double* %7, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i64 0, i64 0), i32 %45, i32 %46, i32* null, i32* null, i32* null, i32* null, i32* null, i32 0, i32* null)
  store i32 %47, i32* %9, align 4
  %48 = load double, double* %7, align 8
  %49 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.95, i64 0, i64 0), double %48)
  %50 = load i32, i32* %9, align 4
  %51 = icmp slt i32 %50, 0
  br i1 %51, label %52, label %54

52:                                               ; preds = %44
  %53 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.94, i64 0, i64 0))
  br label %54

54:                                               ; preds = %52, %44
  %55 = load i32, i32* @const_names, align 4
  %56 = load i32, i32* @const_values, align 4
  %57 = call i32 @av_expr_parse_and_eval(double* %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0), i32 %55, i32 %56, i32* null, i32* null, i32* null, i32* null, i32* null, i32 0, i32* null)
  store i32 %57, i32* %9, align 4
  %58 = load double, double* %7, align 8
  %59 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.96, i64 0, i64 0), double %58)
  %60 = load i32, i32* %9, align 4
  %61 = icmp slt i32 %60, 0
  br i1 %61, label %62, label %64

62:                                               ; preds = %54
  %63 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.94, i64 0, i64 0))
  br label %64

64:                                               ; preds = %62, %54
  %65 = load i32, i32* %4, align 4
  %66 = icmp sgt i32 %65, 1
  br i1 %66, label %67, label %92

67:                                               ; preds = %64
  %68 = load i8**, i8*** %5, align 8
  %69 = getelementptr inbounds i8*, i8** %68, i64 1
  %70 = load i8*, i8** %69, align 8
  %71 = call i32 @strcmp(i8* %70, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.97, i64 0, i64 0))
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %92, label %73

73:                                               ; preds = %67
  store i32 0, i32* %6, align 4
  br label %74

74:                                               ; preds = %88, %73
  %75 = load i32, i32* %6, align 4
  %76 = icmp slt i32 %75, 1050
  br i1 %76, label %77, label %91

77:                                               ; preds = %74
  %78 = load i32, i32* @START_TIMER, align 4
  %79 = load i32, i32* @const_names, align 4
  %80 = load i32, i32* @const_values, align 4
  %81 = call i32 @av_expr_parse_and_eval(double* %7, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i64 0, i64 0), i32 %79, i32 %80, i32* null, i32* null, i32* null, i32* null, i32* null, i32 0, i32* null)
  store i32 %81, i32* %9, align 4
  %82 = load i32, i32* %9, align 4
  %83 = icmp slt i32 %82, 0
  br i1 %83, label %84, label %86

84:                                               ; preds = %77
  %85 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.94, i64 0, i64 0))
  br label %86

86:                                               ; preds = %84, %77
  %87 = call i32 @STOP_TIMER(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.98, i64 0, i64 0))
  br label %88

88:                                               ; preds = %86
  %89 = load i32, i32* %6, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %6, align 4
  br label %74

91:                                               ; preds = %74
  br label %92

92:                                               ; preds = %91, %67, %64
  ret i32 0
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @av_expr_parse_and_eval(double*, i8*, i32, i32, i32*, i32*, i32*, i32*, i32*, i32, i32*) #1

declare dso_local i64 @isnan(double) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @STOP_TIMER(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
